--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,22 @@
+alabaster==0.7.12
+Babel==2.6.0
 certifi==2018.8.24
 chardet==3.0.4
+docutils==0.14
 idna==2.7
+imagesize==1.1.0
+Jinja2==2.10
+MarkupSafe==1.0
 numpy==1.15.2
+packaging==18.0
 pandas==0.22.0
+Pygments==2.2.0
+pyparsing==2.2.2
 python-dateutil==2.7.3
 pytz==2018.5
 requests==2.19.1
 six==1.11.0
+snowballstemmer==1.2.1
+Sphinx==1.8.1
+sphinxcontrib-websupport==1.1.0
 urllib3==1.23
